# FiniteElementProcedures

./: .gitignore  CMakeLists.txt  README.md
C++src4stap/assem/: assem.f95
C++src4stap/elemnt/: elemnt.f95
C++src4stap/elemntAssem/: elemntAssem.f95
C++src4stap/input/: input.f95
C++src4stap/loads/: loads.f95
C++src4stap/russ/: russ2.f95
C++src4stap/stap/: stap.f95
examples/: example_12.1  example_12.2  example_12.3  example_12.4  example_12.4a  weaver_gere_page.352
src4stap/: CMakeLists.txt
src4stap/addban/: CMakeLists.txt  addban.f90  addban.f95
src4stap/addres/: CMakeLists.txt  addres.f90  addres.f95
src4stap/assem/: CMakeLists.txt  assem.f90  assem.f95
src4stap/clear/: CMakeLists.txt  clear.f90  clear.f95
src4stap/colht/: CMakeLists.txt  colht.f90  colht.f95
src4stap/colsol/: CMakeLists.txt  colsol.f90  colsol.f95
src4stap/colsol/include/: format4Colsol.h
src4stap/elcal/: CMakeLists.txt  elcal.f90  elcal.f95
src4stap/elemnt/: CMakeLists.txt  elemnt.f90  elemnt.f95
src4stap/elemntAssem/: CMakeLists.txt  elemntAssem.f90  elemntAssem.f95
src4stap/elemntStress/: CMakeLists.txt  elemntStress.f90  elemntStress.f95
src4stap/error_NOT_USED_ANYMORE/: CMakeLists.txt  error.f90
src4stap/getSeconds/: CMakeLists.txt  getSeconds.f90  getSeconds.f95
src4stap/include/: common.h  itwo.h  tapes.h
src4stap/include/oldFiles/: adata.h  dim.h  el.h  sol.h  var.h
src4stap/input/: CMakeLists.txt  input.f90  input.f95
src4stap/input/include/: format4Input.h
src4stap/loads/: CMakeLists.txt  loads.f90  loads.f95
src4stap/loadv/: CMakeLists.txt  loadv.f90  loadv.f95
src4stap/russ/: CMakeLists.txt  russ1.f90  russ1.f95  russ2.f90  russ2.f95  russ3.f90  russ3.f95
src4stap/russ/include/: format4Russ1.h  format4Russ3.h
src4stap/stap/: CMakeLists.txt  stap.f90
src4stap/stap/include/: format4Stab.h
src4stap/stress/: CMakeLists.txt  stress.f90  stress.f95
src4stap/truss/: CMakeLists.txt  truss.f90  truss.f95
src4stap/trussAssem/: CMakeLists.txt  trussAssem.f90  trussAssem.f95
src4stap/trussStress/: CMakeLists.txt  trussStress.f90  trussStress.f95
src4stap/writed/: CMakeLists.txt  writed.f90  writed.f95
